Fix scroll overflow

--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ body {
 }
 
 h1 {
-  margin: 12px 0;
-  padding: 0;
+  margin: 0;
+  margin-bottom: 16px;
+  padding: 12px;
   text-align: center;
   border-bottom: 1px #d3d6da solid;
   padding-bottom: 1rem;
